# junocam_processing

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
scripts/: initjnc.sh  update_spice_data.sh
src/: cache.rs  calibration.rs  config.rs  constants.rs  darkfield.rs  decompanding.rs  drawable.rs  enums.rs  error.rs  filelocate.rs  flatfield.rs  imagebuffer.rs  inpaint.rs  jcspice.rs  junocam.rs  lib.rs  metadata.rs  path.rs  print.rs  process.rs  rawimage.rs  rawset.rs  strip.rs  triplet.rs
src/calib/: config.toml
src/lens/: cylindrical.rs  fisheye.rs  lens.rs  mod.rs
test-data/JNCE_2021052_32C00054_V01/DataSet/: 10124-Metadata.json
tests/: common.rs  metadata.rs  rawimage.rs  rawset.rs  spice.rs
tests/test-data/spice/: naif0012.lbl  spk_pre_220614_221109_220810_jm0450.bsp  spk_pre_220614_221109_220810_jm0450.bsp.lbl
