[package]
name = "junocam_processing"
version = "0.1.0"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "junocam_processing"
doctest = false

[features]

[dependencies]
image = "0.23.14"
clap = "2.33.3"
spice = "0.1.0"
zip = "0.5.11"
json = "0.12.4"
chrono = "0.4.19"
const_format = "0.2.14"
lazy_static = "1.4.0"
sciimg = "0.2.1"