[package]
name = "junocam_processing"
version = "0.1.0"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "junocam"
doctest = false

[[bin]]
name = "juno"
path = "bin/juno.rs"

[features]

[dependencies]
image = "0.24.1"
clap = { version = "3.2.4", features = ["derive"] }
rust-spice = "0.7.3"
zip = "0.5.11"
json = "0.12.4"
chrono = "0.4.19"
const_format = "0.2.14"
lazy_static = "1.4.0"
sciimg = "0.3.3"
wild = "2.0.4"
serde = { version = "1.0.125", features = ["derive"] }
colored = "2.0.0"
termsize = "0.1.6"
dirs = "4.0.0"